--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body>
   <!-- Tela de Login -->
   <section id="login" class="screen">
-    <h1>Bem-vindo ao App Educacional</h1>
+    <h1>Português e Matemática</h1>
+    <p>Um aplicativo para aprendizado</p>
     <div class="login-form">
+      <img src="./estudante.jpg" alt="foto de perfil">
+      <p>Faça seu Login</p>
       <input type="text" placeholder="Digite seu usuário">
       <input type="password" placeholder="Digite sua senha">
       <button>Login</button>
@@ -20,16 +23,15 @@
 
   <!-- Tela Inicial com Progresso -->
   <section id="home" class="screen hidden">
-    <h1>Olá, [Nome do Aluno]!</h1>
+    <h1>Olá, seja bem-vindo!</h1>
+    <p>O que você deseja aprender</p>
+    
     <div class="progress">
       <p>Progresso: <span class="progress-bar" style="width: 60%;">60%</span></p>
-      <p>Matérias: Matemática, Português, Ciências, História</p>
     </div>
     <div class="subjects">
-      <button>Matemática</button>
-      <button>Português</button>
-      <button>História</button>
-      <button>Ciências</button>
+      <button>Matemática    ></button>
+      <button>Português     ></button>
     </div>
   </section>
 
