--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <button id="botao-portugues">Português ></button>
     </div>
   </section>
-
+  
 <!-- Exercício Interativo -->
 <section id="exercicio" class="tela oculta">
   <h1 id="titulo-exercicio">Exercício: Matemática</h1>
@@ -45,10 +45,14 @@
     <button>C) 9</button>
     <button>D) 6</button>
   </div>
-  <button id="proximo">Próxima questão</button>
+  <div class="botoes-navegacao">
+    <button id="voltar">← Voltar</button>
+    <button id="proximo">Próxima questão →</button>
+  </div>
 </section>
 
   <script src="app.js"></script>
 </body>
 </html>
+
 
